==> trtxash/STM32/STM32F407xE/HAL/03_FreeRTOS_Task/Core/Src/timer.c <==
#include "timer.h"

void TIM3_Init(u16 arr, u16 psc)
{
    TIM_ClockConfigTypeDef sClockSourceConfig = {0};
    TIM_MasterConfigTypeDef sMasterConfig = {0};

    TIM3_Handler.Instance = TIM3;                                        //通用定时器3
    TIM3_Handler.Init.Prescaler = psc;                                   //分频系数
    TIM3_Handler.Init.CounterMode = TIM_COUNTERMODE_UP;                  //向上计数器
    TIM3_Handler.Init.Period = arr;                                      //自动装载值
    TIM3_Handler.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;            //时钟分频因子
    TIM3_Handler.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_ENABLE; // ARPE,1有更新事件才自动重装他的上限值,如果用OS尽量要打开
    if (HAL_TIM_Base_Init(&TIM3_Handler) != HAL_OK)
    {
        Error_Handler();
    }
    sClockSourceConfig.ClockSource = TIM_CLOCKSOURCE_INTERNAL;
    if (HAL_TIM_ConfigClockSource(&TIM3_Handler, &sClockSourceConfig) != HAL_OK)
    {
        Error_Handler();
    }
    sMasterConfig.MasterOutputTrigger = TIM_TRGO_UPDATE;
    sMasterConfig.MasterSlaveMode = TIM_MASTERSLAVEMODE_DISABLE;
    if (HAL_TIMEx_MasterConfigSynchronization(&TIM3_Handler, &sMasterConfig) != HAL_OK)
    {
        Error_Handler();
    }
    __HAL_TIM_ENABLE_IT(&TIM3_Handler, TIM_IT_UPDATE);
    __HAL_TIM_ENABLE(&TIM3_Handler);
}

void TIM4_PWM_Init(u16 arr, u16 psc, u8 ways)
{
    TIM4_Handler.Instance = TIM4;                             //定时器5
    TIM4_Handler.Init.Prescaler = psc;                        //定时器分频
    TIM4_Handler.Init.CounterMode = TIM_COUNTERMODE_UP;       //向上计数模式
    TIM4_Handler.Init.Period = arr;                           //自动重装载值
    TIM4_Handler.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1; //数字分频因子,数字分频因子为1时，TIMxCLK = PCLKx,其他值时，TIMxCLK = PCLKx/2^(数字分频因子)
    HAL_TIM_PWM_Init(&TIM4_Handler);                          //初始化PWM

    TIM4_CHxHandler.OCMode = TIM_OCMODE_PWM1;        //模式选择PWM1
    TIM4_CHxHandler.Pulse = arr / 1;                 //设置比较值,此值用来确定占空比，默认比较值为自动重装载值的一半,即占空比为50%
    TIM4_CHxHandler.OCPolarity = TIM_OCPOLARITY_LOW; //输出比较极性为低

    if (ways & 0B0001)
    {
        HAL_TIM_PWM_ConfigChannel(&TIM4_Handler, &TIM4_CHxHandler, TIM_CHANNEL_1); //配置TIM5通道1
        HAL_TIM_PWM_Start(&TIM4_Handler, TIM_CHANNEL_1);                           //启动TIM5通道1的PWM输出
    }
    if (ways & 0B0010)
    {
        HAL_TIM_PWM_ConfigChannel(&TIM4_Handler, &TIM4_CHxHandler, TIM_CHANNEL_2); //配置TIM5通道2
        HAL_TIM_PWM_Start(&TIM4_Handler, TIM_CHANNEL_2);                           //启动TIM5通道2的PWM输出
    }
    if (ways & 0B0100)
    {
        HAL_TIM_PWM_ConfigChannel(&TIM4_Handler, &TIM4_CHxHandler, TIM_CHANNEL_3); //配置TIM5通道3
        HAL_TIM_PWM_Start(&TIM4_Handler, TIM_CHANNEL_3);                           //启动TIM5通道3的PWM输出
    }
    if (ways & 0B1000)
    {
        HAL_TIM_PWM_ConfigChannel(&TIM4_Handler, &TIM4_CHxHandler, TIM_CHANNEL_4); //配置TIM5通道4
        HAL_TIM_PWM_Start(&TIM4_Handler, TIM_CHANNEL_4);                           //启动TIM5通道4的PWM输出
    }
}

void TIM3_IRQHandler(void)
{
    if (__HAL_TIM_GET_FLAG(&TIM3_Handler, TIM_FLAG_UPDATE))
    {
        u32 status_value = taskENTER_CRITICAL_FROM_ISR(); //进入临界区
        printf("TIM3输出......\r\n");
        taskEXIT_CRITICAL_FROM_ISR(status_value);             //退出临界区
        __HAL_TIM_CLEAR_FLAG(&TIM3_Handler, TIM_FLAG_UPDATE); //清除更新标志
    }
}

void TIM5_IRQHandler(void)
{
    HAL_TIM_IRQHandler(&TIM5_Handler);
}
